--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cloud_firestore: ^4.3.0
   equatable: ^2.0.5
   validators: ^3.0.0
+  smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
