--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   carousel_slider: ^4.2.1
   google_fonts: ^3.0.1
   file_picker: ^5.2.5
+  hydrated_bloc: ^9.0.0
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
