--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,12 @@ dependencies:
   validators: ^3.0.0
   smooth_page_indicator: ^1.0.0+2
   carousel_slider: ^4.2.1
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   file_picker: ^5.2.5
   hydrated_bloc: ^9.0.0
   path_provider: ^2.0.12
   badges: ^3.0.2
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
