--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,15 @@ dependencies:
   path_provider: ^2.0.12
   badges: ^3.0.2
   url_launcher: ^6.1.9
+  flutter_native_splash: ^2.2.18
+
+flutter_native_splash:
+  color: "#428bca"
+  image: assets/images/petmarketlogo_2.png
+  android: true
+  ios: true
+  web: false
+  fill: true
 
 dev_dependencies:
   flutter_test:
