--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         </intent>
     </queries>
    <application
-        android:label="petmarket_bo_app"
+        android:label="PetMarket"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
