--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   badges: ^3.0.2
   url_launcher: ^6.1.9
   flutter_native_splash: ^2.2.18
+  flutter_launcher_icons: ^0.12.0
 
 flutter_native_splash:
   color: "#428bca"
@@ -38,6 +39,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/1024.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/1024.png"
 
 flutter:
   uses-material-design: true
