--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   url_launcher: ^6.1.9
   flutter_native_splash: ^2.2.18
   flutter_launcher_icons: ^0.12.0
+  favorite_button: ^0.0.4
 
 flutter_native_splash:
   color: "#428bca"
