--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
+*.env
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
@@ -31,6 +32,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+lib/env/env.g.dart
 
 # Symbolication related
 app.*.symbols
