--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_native_splash: ^2.2.18
   flutter_launcher_icons: ^0.12.0
   favorite_button: ^0.0.4
+  envied: ^0.3.0
+  http: ^0.13.5
 
 flutter_native_splash:
   color: "#428bca"
@@ -40,6 +42,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0
+  build_runner: ^2.3.3
 
 flutter_icons:
   android: true
